--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earth Jumper v1.0</title>
+    <title>Earth Jumper</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body { background-color: #f0f2f5; font-family: "Helvetica Neue", Arial, sans-serif; padding: 20px; }
@@ -35,7 +35,7 @@
 
 <div class="container">
     <div class="main-card">
-        <h3 class="header-title">🌏 撮影場所へジャンプ！</h3>
+        <h3 class="header-title">🌏 撮影場所へジャンプ！ v1.0</h3>
         <p class="text-center text-muted">電子黒板の写真に書かれた<br>緯度・経度・方位を入力してください</p>
 
         <div class="mb-3">
@@ -113,4 +113,5 @@
 </script>
 
 </body>
+
 </html>
