--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <div class="container">
     <div class="main-card">
-        <h3 class="header-title">🌏 撮影場所へジャンプ！ v1.0</h3>
-        <p class="text-center text-muted">電子黒板の写真に書かれた<br>緯度・経度・方位を入力してください</p>
+        <h3 class="header-title">🌏 撮影場所へジャンプ！ v1.1</h3>
+        <p class="text-center text-muted">各アプリの緯度・経度・方位（方向）を入力してください。<br>グーグルアースでは’画面上’が撮影方向になります。</p>
 
         <div class="mb-3">
             <label class="form-label fw-bold">緯度 (Latitude)</label>
@@ -89,10 +89,9 @@
             return;
         }
 
-        // Google Earth WebのURLフォーマット
+        // Google Earth WebのURLフォーマット (search/... を追加してピンを立てる)
         // @緯度,経度,高度a,カメラ距離d,チルト角y,方位h,ロールt
-        // チルト(y)を75度にして、少し見下ろす感じにしています
-        const url = `https://earth.google.com/web/@${lat},${lon},100a,200d,75y,${heading}h,0t,0r`;
+        const url = `https://earth.google.com/web/search/${lat},${lon}/@${lat},${lon},100a,200d,75y,${heading}h,0t,0r`;
         
         window.open(url, '_blank');
     }
@@ -106,12 +105,11 @@
             return;
         }
 
-        // Google MapsのURL
+        // Google MapsのURL (ピンが確実に立つ正規のフォーマットに修正)
         const url = `https://www.google.com/maps/search/?api=1&query=${lat},${lon}`;
         window.open(url, '_blank');
     }
 </script>
 
 </body>
-
 </html>
