--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earth Jumper</title>
+    <title>Earth Jumper v1.3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body { background-color: #f0f2f5; font-family: "Helvetica Neue", Arial, sans-serif; padding: 20px; }
@@ -26,7 +26,7 @@
         
         .btn-maps-3d {
             background-color: #fbbc04; color: #333; font-weight: bold;
-            width: 100%; padding: 15px; font-size: 1.2rem; /* おすすめなので少し大きく */
+            width: 100%; padding: 15px; font-size: 1.2rem;
             border-radius: 10px; border: none; margin-bottom: 10px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.2);
         }
@@ -48,8 +48,8 @@
 
 <div class="container">
     <div class="main-card">
-        <h3 class="header-title">🌏 撮影場所へジャンプ！ v1.2</h3>
-        <p class="text-center text-muted">緯度・経度・方位（方向）を入力してください</p>
+        <h3 class="header-title">🌏 撮影場所へジャンプ！ v1.3</h3>
+        <p class="text-center text-muted">電子黒板の写真に書かれた<br>緯度・経度・方位を入力してください</p>
 
         <div class="mb-3">
             <label class="form-label fw-bold">緯度 (Latitude)</label>
@@ -92,6 +92,9 @@
             🗺️ Google Maps (2D地図・ピンあり)
         </button>
 
+        <div class="help-text text-center mt-3" style="font-size: 0.75rem;">
+            ※スマホブラウザの場合、仕様により3Dにならず真上からの表示になることがあります。
+        </div>
     </div>
 </div>
 
@@ -107,12 +110,12 @@
             return;
         }
 
-        // place/... でピンを立て、@... でカメラ位置、高度(a)、チルト(y)、方位(h)を指定。data=!3m1!1e3 で航空写真モード。
-        const url = `https://www.google.com/maps/place/${lat},${lon}/@${lat},${lon},150a,75y,${heading}h/data=!3m1!1e3`;
+        // 公式のGoogle Maps URLフォーマットに修正
+        const url = `https://www.google.com/maps/place/${lat},${lon}/@${lat},${lon},250a,75y,${heading}h/data=!3m1!1e3`;
         window.open(url, '_blank');
     }
 
-    // 2. Google Earth (3D景観 + 方位指定 ※ピンは立たない)
+    // 2. Google Earth (3D景観 + 方位指定 + 検索ピン)
     function jumpToEarth() {
         const lat = document.getElementById('latInput').value;
         const lon = document.getElementById('lonInput').value;
@@ -123,8 +126,8 @@
             return;
         }
 
-        // 余計なsearchパラメータを外し、純粋にその座標へ飛ぶように戻しました
-        const url = `https://earth.google.com/web/@${lat},${lon},100a,200d,75y,${heading}h,0t,0r`;
+        // 検索パラメータを入れてピンを落とす試み
+        const url = `https://earth.google.com/web/search/${lat},${lon}/@${lat},${lon},150a,200d,75y,${heading}h,0t,0r`;
         window.open(url, '_blank');
     }
 
