--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
         <button class="btn-maps" onclick="jumpToMaps()">
             🗺️ Google Maps (2D地図・ピンあり)
         </button>
-        <br>
+        <button class="btn-maps" onclick="jumpToMaps()">
+            
+        </button>
         <button class="btn-earth" onclick="jumpToEarth()">
             🚀 Google Earth (3D地図・ピンなし)
         </button>      
@@ -150,5 +152,6 @@
 
 </body>
 </html>
+
 
 
