--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         // 自分自身に飛ばないよう、ここに「地図切出アプリ」の【実際の公開URL】を指定します。
         // （以下の https://～ の部分を、高田さんの実際の地図切出アプリのURLに書き換えてください）
         
-        const mapCutUrl = "https://github.com/takada291/map-clip/";
+        const mapCutUrl = "https://takada291.github.io/map-clip/";
         
         // ※もし、撮影場所アプリと同じフォルダ内に「map_cut.html」などの別名で保存している場合は、
         // const mapCutUrl = "map_cut.html"; 
@@ -181,4 +181,5 @@
 
 </body>
 </html>
+
 
