--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </button>
 
         <button class="btn-rinpan" onclick="jumpToMapCut()">
-            🌲 地図切出アプリ (全国林班図・ピンあり)
+            🌲 地図切出サイト (林班図など選べます・ピンなし)
         </button>
         
         <div class="help-text text-center mt-3" style="font-size: 0.75rem;">
@@ -181,5 +181,6 @@
 
 </body>
 </html>
+
 
 
